En teoria version final

--- a/flask-chatbot/templates/index.html
+++ b/flask-chatbot/templates/index.html
@@ -87,6 +87,6 @@
         </div>
     </div>
 
-    <script src="{{ url_for('static', filename='js/chat.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/chat.js') }}?v=3.0"></script>
 </body>
 </html>
